2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/index.html (href): add note about GUB source code.

2006-06-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): add link to changes.

2006-06-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): opps.

	* site/index.html: remove .ca mirror.

2006-06-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): change URL for new convention.

2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce regtesting results.
	announce 2.8.4

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce 2.9.7

2006-05-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* fr/about/automated-engraving/scoring-esthetics.html: fix URLs.

2006-05-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.6

2006-05-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/index.html: add bandwidth sponsors to download page.

2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* fr/about/automated-engraving/divide-and-conquer.html (Module):
	add. 

	* fr/about/automated-engraving/scoring-esthetics.html (Module): add.

	* scripts/format-page.py (read_build_versions): store (version, url)

	* scripts/lilypondorg.py (note_version): update from GUB

	* site/install/devel.ihtml: idem.

	* site/install/stable.ihtml: use new -URL format.

	* scripts/format-page.py (grab_gettext4): subst @version-URL@  too.

	* site/install/older-versions.html: remove Fedora URL.

	* scripts/format-page.py (do_options):  take --download-base option.

2006-05-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce FISL additions.

	* site/about/automated-engraving/index.html (Module): idem.

	* scripts/big-page.py (Module): add new essay pages. 

	* site/about/automated-engraving/scoring-esthetics.html: new file.

2006-05-21  Han-Wen Nienhuys  <hanwen@lilypond.org>
