@@ -28,6 +28,13 @@ on one day.
 !-->
 
 
+<dt><b>LilyPond 2.9.9 available</b> - <em>June 15, 2006</em>
+<dd>
+This releases fixes many bugs in 2.9.8 and earlier. 
+(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
+<a href="install/#2.8">Download</a>)
+</dd>
+
 <dt><b>LilyPond 2.9.8 available</b> - <em>June 6, 2006</em>
 
 <dd>
@@ -43,26 +50,6 @@ score, and better infrastructure for automated regression testing.
 2.8.4 fixes some minor bugs, and includes a backport of the
 infrastructure for automated regression testing.
 (<a href="install/#2.8">Download</a>)
-</dd>
-
-<dt><b>First test results available</b> - <em>June 4, 2006</em>
-
-<dd>
-After a week of frantic tweaking, the first automated testing results
-are available.  You can now see <a
-href="http://lilypond.org/doc/v2.9/compare-v2.8.4/index.html">in full
-glory</a> what features are broken in the development release
-
- </dd>
-
-
-<dt><b>LilyPond 2.9.7 available</b> - <em>May 30, 2006</em>
-
-<dd> 2.9.7 has improvements in the formatting for figured bass, and
-includes a new framework for detecting bugs earlier, which will make
-the development releases even better</dd> (<a
-href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
-href="install/#2.9">Download</a>) </dd>
 </dd>
 
 
