@@ -22,6 +22,26 @@
       <dl>
 
 
+<dt><b>First test results available</b> - <em>June 4, 2006</em>
+
+<dd>
+After a week of frantic tweaking, the first automated testing results
+are available.  You can now see <a
+href="http://lilypond.org/doc/v2.9/compare-v2.8.4/index.html">in full
+glory</a> what features are broken in the development release
+
+ </dd>
+
+
+<dt><b>LilyPond 2.9.7 available</b> - <em>May 30, 2006</em>
+
+<dd> 2.9.7 has improvements in the formatting for figured bass, and
+includes a new framework for detecting bugs earlier, which will make
+the development releases even better</dd> (<a
+href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>) </dd>
+</dd>
+
 
 <dt><b>LilyPond 2.9.6 available</b> - <em>May 24, 2006</em> <dd> This
 release has new features in beam formatting: beams may now be put on
